# autopilot-mcp

./: .gitignore  README.md  browser.py  credentials.py  file_server.py  logging_setup.py  playbooks.py  pyproject.toml  server.py
docs/: bw_setup.md
scripts/: manual_login.py
tests/: conftest.py  test_browser_profile.py  test_credentials_fill.py  test_credentials_read.py  test_credentials_write.py  test_file_server.py  test_playbook_runner.py  test_tool_timeouts.py
