[project]
name = "autopilot-mcp"
version = "0.2.0"
description = "Generic browser automation MCP with learned playbooks"
requires-python = ">=3.11,<3.14"
dependencies = [
    "camoufox>=0.4",
    "cryptography>=44",
    "keyring>=25",
    "mcp>=1.0.0",
    "pyotp>=2.9",
    "structlog>=24.4",
    "tldextract>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
